2012-03-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/pc/startup.S: Define __start.

2012-03-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* gentpl.py (kernel): Remove the use of TARGET_OBJ2ELF after strip since
	strip already transforms he format.

2012-03-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/i386-pc-cygwin-img-ld.sc: Define also _edata and __edata.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Add missing gettext init.
	* util/grub-kbdcomp.in: Likewise.
	* util/grub-mkconfig.in: Likewise.
	* util/grub-mknetdir.in: Likewise.
	* util/grub-mkrescue.in: Likewise.
	* util/grub-mkstandalone.in: Likewise.
	* util/grub-reboot.in: Likewise.
	* util/grub-set-default.in: Likewise.
	* util/grub.d/00_header.in: Likewise.
	* util/grub.d/10_hurd.in: Likewise.
	* util/grub.d/10_windows.in: Likewise.
	* util/grub.d/30_os-prober.in: Likewise.
	* util/powerpc/ieee1275/grub-mkrescue.in: Likewise.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/Rules-swiss: Fix header comment.

2012-02-29  Andreas Vogel <anvoit>

	* grub-core/kern/misc.c (grub_xvasprintf): Fix an exit path which
	resulted in leak of arguments.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/i386/pc/startup_raw.S: Use separate
	reed_solomon_size const definition instead of computing it since
	Apple assembler doesn't support the later.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* gentpl.py (kernel): Rewrite Apple part.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/kernel.h (FOR_MODULES): Check module magic.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimagexx.c (locate_sections): Support non-standard
	ELF section gap.
	(load_image): Likewise.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Fix a typo in previous commit.

2012-02-29  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't add -Wl,-N on Apple platform.
